CSS: fix horizontal scrolling
Otherwise the scrollbar is put at the bottom of the page instead of the bottom
of the window and it is not possible to scroll horizontaly

--- a/data/common.css
+++ b/data/common.css
@@ -8,7 +8,7 @@ a:hover{  text-decoration: underline }
 div#header { position:fixed; top:0; left:0; right:0; background-color: #f5f5f5; z-index:2; height: 5.2em; overflow: clip; }
 div#header+hr {position:fixed; top:5.2em; left:0; right:0; z-index:2}
 div#header input {-webkit-appearance:searchfield;-moz-appearance:searchfield;appearance:searchfield;}
-div#content { margin-top: 5.3em; overflow-x:auto;}
+div#content { margin-top: 5.3em; }
 
 .code { border-collapse:collapse; width:100%; padding:0 }
 .code { font-family: monospace; }
